# serde_tokenstream

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: ibidem.rs  lib.rs  ordered_map.rs  serde_tokenstream.rs
testlib/: Cargo.toml
testlib/src/: lib.rs
tests/: ui.rs
tests/ui/: bad_array1.stderr  bad_array2.stderr  bad_array3.stderr  bad_ident.rs  bad_parse_wrapper.rs  bad_value2.rs  bad_value2.stderr  bad_value3.rs  bad_value3.stderr  bad_value4.rs  bad_value4.stderr  bad_value6.stderr  double_comma.rs  extra_member1.stderr  extra_member2.stderr  extra_memberr2.rs  extra_memberr2.stderr  just_ident.rs  missing_field1.rs  missing_field1.stderr  missing_field2.rs  no_value.stderr
ui-tests/: Cargo.toml
ui-tests/tests/ui/: bad_array1.rs  bad_array2.rs  bad_array3.rs  bad_ident.stderr  bad_parse_wrapper.stderr  bad_parse_wrapper_compound.rs  bad_parse_wrapper_compound.stderr  bad_value1.rs  bad_value1.stderr  bad_value5.rs  bad_value5.stderr  bad_value6.rs  double_comma.stderr  extra_member1.rs  just_ident.stderr  missing_field1.stderr  missing_field2.stderr  missing_field3.rs  missing_field3.stderr  missing_field4.rs  missing_field4.stderr  no_equals.rs  no_equals.stderr  no_value.rs
