[package]
name = "serde_tokenstream"
version = "0.1.2"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
description = "A serde deserializer for proc-macro TokenStreams"
repository = "https://github.com/oxidecomputer/serde_tokenstream"
readme = "README.md"
keywords = ["serde", "tokenstream", "proc_macro"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

[dependencies]
proc-macro2  = "1.0.19"
serde = { version = "1.0.115", features = ["derive"] }
syn = { version = "1.0.38", features = ["full", "extra-traits"] }

[dev-dependencies]
quote = "1.0.7"
testlib = { path = "testlib" }
trybuild = "1.0.32"
