[package]
name = "serde_tokenstream"
version = "0.1.7"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
description = "A serde deserializer for proc-macro TokenStreams"
repository = "https://github.com/oxidecomputer/serde_tokenstream"
readme = "README.md"
keywords = ["serde", "tokenstream", "proc_macro"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

[dependencies]
proc-macro2  = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
quote = "1.0"
testlib = { path = "testlib" }
trybuild = "1.0"
